--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -9,7 +9,8 @@
      font-family: Arial, sans-serif;
      margin: 0;
      padding: 0;
-     background-color: #19376D;
+     /*background-color: #19376D;*/
+     background-image: url(https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
      color: #ffffff;
    }
    
@@ -18,7 +19,7 @@
     /*background-color: #576CBC;*/
      padding: 10px ;
      border-radius: 24px;
-     background: linear-gradient(145deg, #5d74c9, #4e61a9);
+     background: linear-gradient(145deg, #3b65fcc3, #4e62a9f4);
      box-shadow:  5px 5px 0px #3e4d85,
                   -5px -5px 0px #708bf3;
   
@@ -82,7 +83,11 @@
    }
    
    .hero {
-   
+    background-color: #1c4ba3c9;
+    border-radius: 9%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
      background-size: cover;
      background-position: center;
      color: #ffffff;
@@ -160,6 +165,7 @@
    
    
    .video-container {
+    
      position: relative;
      width: 100%;
      height: 50vh; 
@@ -167,12 +173,23 @@
    }
    
    .video-container iframe {
+    
      position: absolute;
      top: 60%;
      left: 50%;
      transform: translate(-50%, -50%);
-     width: 50%; 
-     height: 100%;
+    
+    
+   }
+
+   .video-semanal{
+
+    border: 0.2cm;
+    border-style:ridge;
+    border-color: #19376D;
+    border-radius: 5%;
+    
+    
    }
    
    
