--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -6,12 +6,22 @@
    }
    
    body {
+
+    /*Fuente*/
+
      font-family: Arial, sans-serif;
      margin: 0;
      padding: 0;
+     color: #ffffff;
+     /*Fondo*/
+
      /*background-color: #19376D;*/
      background-image: url(https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&w=400);
-     color: #ffffff;
+     min-height: 100vh;
+
+     /*Cursor*/
+
+     cursor: url('CURSOR/4\(small\).png'), auto;
    }
    
    .container.section  {
@@ -96,12 +106,12 @@
 
    .hero h2 {
      font-size: 48px;
-     margin-bottom: 20px;
+     margin-bottom: 10px;
    }
    
    .hero p {
      font-size: 24px;
-     margin-bottom: 40px;
+     margin-bottom: 20px;
    }
    
    .btn {
@@ -140,7 +150,7 @@
    
    .section h2 {
      font-size: 36px;
-     margin-bottom: 20px;
+     margin-bottom: 10px;
      color: #ffffff;
    }
    
@@ -200,243 +210,206 @@
 /*Apartado TEAM*/
 
 
-.dividido-team{
-  
-}
-.team-completo{
-  align-items: center;
-  justify-content: center;
+/*Hover de equipo*/
 
- margin-top: 5%;
-  margin-left: 7%;
-  display: flex;
-  flex-direction: row;
-  gap: 3.5%;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-
-
-}
-.persona-team{
- 
-  background-color: #1d237ef0;
-
-  margin-top: 2%;
-  margin-left: 0%;
-  margin-right: 0%;
-  
-  border-radius:  15%;
-}
-.texto_centrado-team{
-text-align: center;
-
-
-
-
-}
-.redes-team{
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Inter, sans-serif;
 }
 
-.radio-tile {
-  
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  min-height: 40px;
-  border-radius: 0.5rem;
-  border: 2px solid #b5bfd9;
-  background-color: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  transition: 0.15s ease;
-  cursor: pointer;
+.wrapper {
   position: relative;
-}
-
-.radio-inputs {
-
+  width: 100%;
+  height: 100%;
+  padding: 20px;
   display: flex;
-  margin-left: 5%;
-  align-items: center;
-  max-width: 350px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  align-content: center;
+  justify-content: center;
+  gap: 24px;
+  flex-wrap: wrap;
+  margin-top: -3%;
 }
 
-.radio-inputs > * {
-  margin: 6px;
-}
-
-.instagram:checked + .radio-tile {
-  border-color: #cc39a4;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  color: #cc39a4;
-}
-
-.instagram:checked + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-  background-color: #cc39a4;
-  border-color: #cc39a4;
-}
-
-.instagram:checked + .radio-tile .radio-icon svg {
-  fill: #fff;
-}
-
-.instagram:checked + .radio-tile .radio-label {
-  color: #cc39a4;
-}
-
-.instagram:focus + .radio-tile {
-  background-color: #cc39a4;
-  border-color: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #b5c9fc;
-}
-.instagram:checked + .radio-tile {
-  background-color: #cc39a4;
-  border-color: #fff;
-}
-
-.instagram:focus + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-}
-
-/*  Twitter */
-.twitter:checked + .radio-tile {
-  border-color: #03a9f4;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  color: #03a9f4;
-}
-
-.twitter:checked + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-  background-color: #03a9f4;
-  border-color: #03a9f4;
-}
-
-.twitter:checked + .radio-tile .radio-icon svg {
-  fill: #fff;
-}
-
-.twitter:checked + .radio-tile .radio-label {
-  color: #03a9f4;
-}
-
-.twitter:focus + .radio-tile {
-  background-color: #03a9f4;
-  border-color: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #b5c9fc;
-}
-.twitter:checked + .radio-tile {
-  background-color: #03a9f4;
-  border-color: #fff;
-}
-
-.twitter:focus + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-}
-/* discord */
-.discord:checked + .radio-tile {
-  border-color: #8c9eff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  color: #8c9eff;
-}
-
-.discord:checked + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-  background-color: #8c9eff;
-  border-color: #8c9eff;
-}
-
-.discord:checked + .radio-tile .radio-icon svg {
-  fill: #fff;
-}
-
-.discord:checked + .radio-tile .radio-label {
-  color: #8c9eff;
-}
-
-.discord:focus + .radio-tile {
-  background-color: #8c9eff;
-  border-color: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1), 0 0 0 4px #b5c9fc;
-}
-.discord:checked + .radio-tile {
-  background-color: #8c9eff;
-  border-color: #fff;
-}
-
-.discord:focus + .radio-tile:before {
-  transform: scale(1);
-  opacity: 1;
-}
-
-
-
-.instagram:hover {
-  border-color: #cc39a4;
-}
-.twitter:hover {
-  border-color: #03a9f4;
-}
-.discord:hover {
-  border-color: #8c9eff;
-}
-
-.radio-tile:hover:before {
-  transform: scale(1);
-  opacity: 1;
-}
-
-.radio-icon svg {
-  width: 2rem;
-  height: 2rem;
-}
-.instagram {
-  fill: #cc39a4;
-}
-.twitter {
-  fill: #03a9f4;
-}
-.discord {
-  fill: #8c9eff;
-}
-
-.radio-label {
-  color: #707070;
-  transition: 0.375s ease;
-  text-align: center;
-  font-size: 1px;
-}
-
-.radio-input {
-  clip: rect(0 0 0 0);
-  -webkit-clip-path: inset(100%);
-  clip-path: inset(100%);
-  height: 1px;
+.card {
+  position: relative;
+  width: 325px;
+  height: 450px;
+  background: #000;
+  border-radius: 18px;
   overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
+
+.poster {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  filter: grayscale(0%);
+  
+}
+
+.poster:hover {
+  filter: grayscale(100%)
+  
+}
+
+.poster::before {
+  content: '';
+  position: absolute;
+  bottom: -45%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: .3s;
+  filter: grayscale(0%);
+}
+
+.card:hover .poster::before {
+  bottom: 0;
+  
+}
+
+.poster img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: .3s;
+}
+
+.card:hover .poster img {
+  transform: scale(1.1);
+  filter: grayscale(100%);
+}
+
+.details {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  height: auto;
+  padding: 1.5em 1.5em 2em;
+  background: #000a;
+  backdrop-filter: blur(16px) saturate(120%);
+  transition: .3s;
+  color: #fff;
+  
+  z-index: 2;
+}
+
+.card:hover .details {
+  bottom: 0;
+}
+
+.details h1,
+.details h2 {
+  font-weight: 700;
+}
+
+.details h1 {
+  font-size: 1.5em;
+  margin-bottom: 5px;
+}
+
+.details h2 {
+  font-weight: 400;
+  font-size: 1em;
+  margin-bottom: 10px;
+  opacity: .6;
+}
+
+.details .rating {
+  position: relative;
+  margin-bottom: 15px;
+  display: flex;
+  gap: .25em;
+}
+
+.details .rating i {
+  color: #e3c414;
+}
+
+.details .rating span {
+  margin-left: 0.25em;
+}
+
+.details .tags {
+  display: flex;
+  gap: .375em;
+  margin-bottom: .875em;
+  font-size: .85em;
+}
+
+.details .tags span {
+  padding: .35rem .65rem;
+  color: #fff;
+  border: 1.5px solid rgba(255 255 255 / 0.4);
+  border-radius: 4px;
+  border-radius: 50px;
+}
+
+.details .desc {
+  color: #fff;
+  opacity: .8;
+  line-height: 1.5;
+  margin-bottom: 1em;
+}
+
+.details .cast h3 {
+  margin-bottom: .5em;
+}
+
+.details .cast ul {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.625rem;
+  width: 100%;
+}
+
+.details .cast ul li {
+  list-style: none;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1.5px solid #fff;
+}
+
+.details .cast ul li img {
+  width: 100%;
+  height: 100%;
+}
+
+
 
 
 
 /*Apartado Novedades*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -520,312 +493,6 @@ padding: 40px;
 
 
 
-
-
-
-
-
-
-
-
-
-.main_back {
-  position: absolute;
-  border-radius: 10px;
-  transform: rotate(90deg);
-  width: 11em;
-  height: 11em;
-  background: linear-gradient(270deg, #03a9f4, #cc39a4, #ffb5d2);
-  z-index: -2;
-  box-shadow: inset 0px 0px 180px 5px #ffffff;
-}
-
-.main {
-  display: flex;
-  flex-wrap: wrap;
-  width: 14em;
-  align-items: center;
-  justify-content: center;
-  z-index: -1;
-}
-
-.card {
-  width: 60px;
-  height: 60px;
-  border-top-left-radius: 10px;
-  background: lightgrey;
-  transition: .4s ease-in-out, .2s background-color ease-in-out, .2s background-image ease-in-out;
-  background: rgba(255, 255, 255, 0.596);
-  backdrop-filter: blur(5px);
-  border: 1px solid transparent;
-  -webkit-backdrop-filter: blur(5px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.card .instagram {
-  opacity: 0;
-  transition: .2s ease-in-out;
-  fill: #cc39a4;
-}
-
-.card:nth-child(2) {
-  border-radius: 0px;
-}
-
-.card:nth-child(2) .twitter {
-  opacity: 0;
-  transition: .2s ease-in-out;
-  fill: #03A9F4;
-}
-
-.card:nth-child(3) {
-  border-top-right-radius: 10px;
-  border-top-left-radius: 0px;
-}
-
-.card:nth-child(3) .dribble {
-  opacity: 0;
-  transition: .2s ease-in-out;
-  fill: #ffb5d2;
-}
-
-.card:nth-child(4) {
-  border-radius: 0px;
-}
-
-.card:nth-child(4) .codepen {
-  opacity: 0;
-  transition: .2s ease-in-out;
-  fill: black;
-}
-
-.card:nth-child(5) {
-  border-radius: 0px;
-}
-
-.card:nth-child(5) .uiverse {
-  position: absolute;
-  margin-left: 0.2em;
-  margin-top: 0.2em;
-  opacity: 0;
-  transition: .2s ease-in-out;
-}
-
-.card:nth-child(6) {
-  border-radius: 0px;
-}
-
-.card:nth-child(6) .discord {
-  opacity: 0;
-  transition: .2s ease-in-out;
-  fill: #8c9eff;
-}
-
-.card:nth-child(7) {
-  border-bottom-left-radius: 10px;
-  border-top-left-radius: 0px;
-}
-
-.card:nth-child(7) .github {
-  opacity: 0;
-  transition: .2s ease-in-out;
-  fill: black;
-}
-
-.card:nth-child(8) {
-  border-radius: 0px;
-}
-
-.card:nth-child(8) .telegram {
-  opacity: 0;
-  transition: .2s ease-in-out;
-  fill: #29b6f6;
-}
-
-.card:nth-child(9) {
-  border-bottom-right-radius: 10px;
-  border-top-left-radius: 0px;
-}
-
-.card:nth-child(9) .reddit {
-  opacity: 0;
-  transition: .2s ease-in-out;
-}
-
-.main:hover {
-  width: 14em;
-  cursor: pointer;
-}
-
-.main:hover .main_back {
-  opacity: 0;
-}
-
-.main:hover .card {
-  margin: .2em;
-  border-radius: 10px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(255, 255, 255, 0.2);
-}
-
-.main:hover .card:nth-child(5) {
-  border: transparent;
-}
-
-.main:hover .text {
-  opacity: 0;
-  z-index: -3;
-}
-
-.main:hover .instagram {
-  opacity: 1;
-}
-
-.main:hover .twitter {
-  opacity: 1;
-}
-
-.main:hover .dribble {
-  opacity: 1;
-}
-
-.main:hover .codepen {
-  opacity: 1;
-}
-
-.main:hover .uiverse {
-  opacity: 1;
-}
-
-.main:hover .discord {
-  opacity: 1;
-}
-
-.main:hover .github {
-  opacity: 1;
-}
-
-.main:hover .telegram {
-  opacity: 1;
-}
-
-.main:hover .reddit {
-  opacity: 1;
-}
-
-.card:nth-child(1):hover {
-  background-color: #cc39a4;
-}
-
-.card:nth-child(1):hover .instagram {
-  fill: white;
-}
-
-.card:nth-child(2):hover {
-  background-color: #03A9F4;
-}
-
-.card:nth-child(2):hover .twitter {
-  fill: white;
-}
-
-.card:nth-child(3):hover {
-  background-color: #ffb5d2;
-}
-
-.card:nth-child(3):hover .dribble {
-  fill: white;
-}
-
-.card:nth-child(4):hover {
-  background-color: #1E1F26;
-}
-
-.card:nth-child(4):hover .codepen {
-  fill: white;
-}
-
-.card:nth-child(5):hover {
-  animation: backgroundIMG .1s;
-  animation-fill-mode: forwards;
-}
-
-.card:nth-child(5):hover .uiverse #paint0_linear_501_142 stop {
-  stop-color: white;
-}
-
-.card:nth-child(5):hover .uiverse #paint1_linear_501_142 stop {
-  stop-color: white;
-}
-
-.card:nth-child(5):hover .uiverse #paint2_linear_501_142 stop {
-  stop-color: white;
-}
-
-@keyframes backgroundIMG {
-  100% {
-    background-image: linear-gradient(#BF66FF,#6248FF,#00DDEB);
-  }
-}
-
-.card:nth-child(6):hover {
-  background-color: #8c9eff;
-}
-
-.card:nth-child(6):hover .discord {
-  fill: white;
-}
-
-.card:nth-child(7):hover {
-  background-color: black;
-}
-
-.card:nth-child(7):hover .github {
-  fill: white;
-}
-
-.card:nth-child(8):hover {
-  background-color: #29b6f6;
-}
-
-.card:nth-child(8):hover .telegram > path:nth-of-type(1) {
-  fill: white;
-}
-
-.card:nth-child(8):hover .telegram > path:nth-of-type(2) {
-  fill: #29b6f6;
-}
-
-.card:nth-child(8):hover .telegram > path:nth-of-type(3) {
-  fill: #29b6f6;
-}
-
-.card:nth-child(9):hover {
-  background-color: rgb(255,69,0);
-}
-
-.card:nth-child(9) .reddit > g circle {
-  fill: rgb(255,69,0);
-}
-
-.card:nth-child(9) .reddit > g path {
-  fill: white;
-}
-
-.text {
-  position: absolute;
-  font-size: 0.7em;
-  transition: .4s ease-in-out;
-  color: black;
-  text-align: center;
-  font-weight: bold;
-  letter-spacing: 0.33em;
-  z-index: 3;
-}
- 
 
 
 
