--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -21,7 +21,7 @@
   /*Fondo*/
 
   /*background-color: #19376D;*/
-  background-image: url(https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&w=400);
+  background-image: url(https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
   min-height: 100vh;
 
   /*Cursor*/
