--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -11,7 +11,6 @@
     
 
 
-
  body {
  
   /*Fuente*/
@@ -23,15 +22,29 @@
   
   /*Fondo*/
 
-  /*background-color: #19376D;*/
-  background-image: url(https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-  min-height: 100vh;
 
+
+  /*background-color: #19376D;*/
+  background-image: url(https://images.unsplash.com/photo-1511512578047-dfb367046420?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  min-height: 100vh;
+  
+   
+    
   /*Cursor*/
   cursor: url('UI/CURSOR/4\(small\).png'), auto;
 }
 
-
+@keyframes glow {
+  0% {
+      filter: brightness(1);
+  }
+  50% {
+      filter: brightness(.3);
+  }
+  100% {
+      filter: brightness(1);
+  }
+}
 .container.section  {
 
  /*background-color: #576CBC;*/
@@ -56,34 +69,75 @@
 }
 
 
+.container { 
+  
+  width: 100%;
+  max-width: 95%;
+  min-width: 95%;
+  margin: 25px auto 5px auto;
 
-.container {
- 
-  width: 80%;
-  margin: 0 auto;
 }
 
+
+.texto_movedizo{
+
+
+  position: absolute;
+}
 .header {
-  background-color: #0b2447b0;
+
+
+
+
+  background-color: #000000b0;
   backdrop-filter: blur(20px);
   padding: 20px 0;
 }
 
+
 .header h1 {
+  
   font-size: 36px;
   color: #ffffff; 
-  margin-bottom: 10px;
-  text-align: center;
+ 
+  
+ 
  
 }
 
+@keyframes wiggle {
+  0%, 100% { transform: translateX(0); }
+    25% { transform: translateX(-3px); }
+    75% { transform: translateX(3px); }
+}
+
+
+.login_button{
+
+  animation: wiggle 2s linear infinite;
+
+
+  position: absolute  ;
+margin-left: 501px;
+
+
+}
+
+.container pixel-gaming{
+  
+ 
+  text-align: left;
+}
+
 .pixel-gaming {
+  
   font-family: "Danfo", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   font-variation-settings:
     "ELSH" 0;
+    
 }
 
 .mundo-pixelado{
@@ -118,18 +172,43 @@
 
 
 
+
+@keyframes slidein {
+  from {
+    
+    width: 300%;
+  }
+
+  to {
+    
+    width: 55%;
+  }
+
+  
+}
+
 .h2slogan h2 {
+
   text-align: center;
   font-family: sans-serif;
   font-weight: 800;
   font-size: 29px;
   text-transform: uppercase;
   color: rgb(255, 255, 255);
-  background: rgba(113, 4, 113, 0.841);
+  background: rgb(0, 0, 0);
   border-radius: 30px;
   margin: 5% auto 30px auto;
   width: 55%;
   animation: backgroundAnimation 5s infinite alternate;
+  
+
+  animation-duration: 3s;
+  animation-name: slidein;
+  animation-iteration-count: 1;
+}
+
+.h2slogan h2 :hover{
+  
 }
 
 @keyframes backgroundAnimation {
@@ -168,62 +247,141 @@ h2{
 
 }
 
+
+
+
+
+
+@keyframes shine {
+  0% {
+      filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5))
+              drop-shadow(0 0 10px rgba(255, 255, 255, 0.4))
+              drop-shadow(0 0 15px rgba(255, 255, 255, 0.3))
+              drop-shadow(0 0 25px rgba(255, 255, 255, 0.2));
+  }
+  50% {
+      filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5))
+              drop-shadow(0 0 20px rgba(255, 255, 255, 0.4))
+              drop-shadow(0 0 30px rgba(255, 255, 255, 0.3))
+              drop-shadow(0 0 40px rgba(255, 255, 255, 0.2));
+  }
+  100% {
+      filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5))
+              drop-shadow(0 0 10px rgba(255, 255, 255, 0.4))
+              drop-shadow(0 0 15px rgba(255, 255, 255, 0.3))
+              drop-shadow(0 0 25px rgba(255, 255, 255, 0.2));
+  }
+}
+
+
+
+.logo_inicio{
+  overflow: hidden;
+  color: white;
+  text-decoration: none;
+  
+  transition: color 1s ease-in-out;
+  display: inline-block;
+  animation: shine 4.3s infinite alternate;
+  
+}
+
+
+
+.navbar {
+  display: flex;
+
+  flex-direction: row;
+ 
+  
+}
+
+.navbar :hover > :not(:hover){
+  opacity: 0.4;
+}
+
+ 
+
+
+
 .navbar ul {
-  list-style-type: none;
-  margin: 0;
+  
+  flex-direction: row;
+ 
+  margin: auto 0 auto 255px;
+ 
   padding: 0;
   text-align: center;
   
 }
 
+.container button{ /*Arreglar despues*/
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+
+
 
 .navbar ul li {
-  display: inline-block;
-  margin-right: 15px;  
+  
+  transition: opacity 1s ease;
+  display:inline;
+  margin: auto 0; 
+  margin-right:15px;  
   border-radius: 5%;
 
 }
 
 .navbar ul li a {
   
-  padding: .35rem .65rem;
-  color: #fff;
-  border: 1.5px solid #9149e36a;
-  background-color: #9149e36a;
+  padding: .25rem .65rem;
+  
+ 
+  color: #ffffff;
+  border: 1.5px solid #ff00006a;
+  background-color: #0000006a;
   backdrop-filter: blur(100px);
   
   text-decoration: none;
   border-radius: 5px;
 
- 
   font-size: 20px;
-  transition: color 0.3s;
+  
 
 }
 
 .navbar ul li a:hover {
-  color: #576CBC;
-  background-color: #fff;
+  color: #ffffff;
+  background-color: #ff000064;
   transition: border-radius 1s;
   border-radius: 10px;
   border-radius: 50px;
 }
 
 .hero {
-   background-color: #1c4ba3c9;
+    background-color: #000000af;
    backdrop-filter: blur(15px);
-   border-radius: 9%;
-   margin: 5% 10% 0 10%;
+   border-radius: 3% ;
+   margin: 5% 5% 0 5%;
    background-size: cover;
    background-position: center;
    color: #ffffff;
    text-align: center;
    padding: 100px 0;
+   
   }
 
+.hero .container{
+  margin-top: 5vh;
+  }
+
+
 .hero img{
+  animation: glow 5s infinite alternate;
   display: inline-block;
- 
+  position: relative;
   border-radius: 10%;
 }
 
@@ -260,11 +418,11 @@ h2{
   border-radius: 5px;
   font-size: 20px;
   text-decoration: none;
-  transition: background-color 0.3s;
+  transition: background-color 0.5s;
 }
 
 .btn:hover {
-  background-color: #576CBC;
+  background-color:#0af;
 }
 
 .section {
@@ -309,31 +467,39 @@ h2{
 }
 
 
-.video-container {
- 
+
+.multimedia-container {
+  
   position: relative;
-  width: 100%;
-  height: 50vh; 
+  padding-bottom: 56.25%;
+  width: 80%;
+  height: 0; 
   overflow: hidden;
+  max-width: 100%;
+  background: #00000000;
+  margin: 0 auto;
 }
 
-.video-container iframe {
- 
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
- 
+.multimedia-container iframe {
+  
+  position : absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  box-shadow: 0 0 20px #10101000;
  
 }
 
-.video-semanal{
-
- border: 0.2cm;
- border-style:ridge;
- border-color: #19376D;
- border-radius: 5%;
- 
+.multimedia-container img {
+  
+  position : absolute;
+  top: 0;
+  left: 0;
+  margin-top: 5%;
+  width: 100%;
+  height: 80%;
+  box-shadow: 0 0 20px #10101000;
  
 }
 
